# tp-highload-web-server

./: CMakeLists.txt  Dockerfile  Makefile  README.md  httptest.py  nginx.Dockerfile  server.cfg
.github/workflows/: build.yml
configs/: nginx.conf  server.cfg
project/: main.c
project/include/: config.h  handler.h  http.h  logger.h  server.h  thread_pool.h  utils.h
project/src/: config.c  handler.c  http.c  server.c  thread_pool.c  utils.c
